Make out reading more efficient.